--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
 
             echo ">>> Pull code mới nhất"
             git reset --hard
-            git pull origin master
+            git pull origin main
 
             echo ">>> Stop & remove container cũ"
             docker stop library-management || true
