--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,8 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           password: ${{ secrets.SERVER_PASS }}
           script: |
+            set -e  # ✅ DỪNG NGAY KHI CÓ LỖI
+            
             echo "=== 🚀 Triển khai Frontend React (Vite, port 5173) ==="
 
             cd /home/utc/library-management-fe
